--- a/reactivespringboot/src/main/resources/application.yml
+++ b/reactivespringboot/src/main/resources/application.yml
@@ -1,9 +1,5 @@
 spring:
   r2dbc:
     username: root
-    password: Omaremad2!
+    password:
     url: r2dbc:mysql://localhost:3306/reactive_spring
-#  flyway:
-#    user: root
-#    password: Omaremad2!
-#    url: jdbc:mysql://localhost:3306/reactive_spring
